chore : fixed button display on mobile

--- a/css/rooms.css
+++ b/css/rooms.css
@@ -26,7 +26,7 @@ img {
 .main-container {
   width: 85%;
   margin: 0 auto;
-  padding: 3rem 0;
+  padding: 9rem 0 2rem 0;
 }
 
 h1.main-heading {
@@ -116,7 +116,7 @@ section.room {
 /* MEDIA QUERIESS */
 @media all and (max-width: 520px) {
   .main-container {
-    padding: 2rem 0;
+    padding: 4rem 0;
   }
 
   h1.main-heading {
@@ -150,6 +150,10 @@ section.room {
     grid-row: 3;
   }
 
+  .room__info {
+    flex-direction: column;
+  }
+
   .room__price {
     font-size: 1rem;
     line-height: 15px;
@@ -162,8 +166,8 @@ section.room {
   }
 
   .room__button {
+    width: 150px;
     margin: 1rem 0;
     font-size: 1rem;
-    padding: 0.5rem 1.5rem;
   }
 }
